@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2025-01-29T00:39:22Z",
-  "count" : 128,
-  "count_minmax" : [ 126, 128 ],
-  "count_decinc" : [ -0, +128 ],
+  "timestamp" : "2025-02-10T00:41:15Z",
+  "count" : 108,
+  "count_minmax" : [ 108, 128 ],
+  "count_decinc" : [ -20, +128 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
