@@ -1,15 +1,10 @@
 {
-  "count": 1788,
+  "count": 1791,
   "uniques": 13,
   "clones": [
     {
-      "timestamp": "2025-01-26T00:00:00Z",
-      "count": 108,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-01-27T00:00:00Z",
-      "count": 128,
+      "count": 108,
       "uniques": 1
     },
     {
@@ -69,8 +64,13 @@
     },
     {
       "timestamp": "2025-02-08T00:00:00Z",
-      "count": 126,
+      "count": 128,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-02-09T00:00:00Z",
+      "count": 129,
+      "uniques": 2
     }
   ]
 }
